--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "dependencies": {
         "dotenv": "^16.4.5",
         "express": "^4.16.4",
+        "express-session": "^1.18.0",
         "mongodb": "^6.5.0",
         "mongoose": "^8.3.0",
         "nodemon": "^3.1.0",
+        "passport": "^0.7.0",
+        "passport-local-mongoose": "^8.0.0",
         "pug": "^3.0.2"
     }
 }
