--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.16.4",
         "express-session": "^1.18.0",
+        "moment": "^2.30.1",
         "moments": "^0.0.2",
         "mongodb": "^6.5.0",
         "mongoose": "^8.3.0",
